--- a/app/app/templates/base.html
+++ b/app/app/templates/base.html
@@ -21,6 +21,9 @@
                             <a href="{{ url_for('main.index') }}" class="navbar-item">
                                 Home
                             </a>
+                            <a href="{{ url_for('main.contact') }}" class="navbar-item">
+                                Contact
+                            </a>
                             {% if current_user.is_authenticated %}
                             <a href="{{ url_for('main.profile') }}" class="navbar-item">
                                 Profile
