--- a/app/app/templates/response_list.html
+++ b/app/app/templates/response_list.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <h1 class="title">
-  Response form
+  Response List
 </h1>
 <h2 class="subtitle">
-  in progress...
+  {{ table }}
 </h2>
 {% endblock %}
