--- a/app/app/templates/base.html
+++ b/app/app/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='apple.png') }}">
     <title>Personal Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
 </head>
@@ -15,6 +16,19 @@
         <div class="hero-head">
             <nav class="navbar">
                 <div class="container">
+
+                    <div class="navbar-brand">
+                        <a href='./' class="navbar-item">
+                          <img src="./static/apple.png" alt="Logo">
+                        </a>
+                        <span class="navbar-burger burger" data-target="navbarMenuHeroA">
+                          <span></span>
+                          <span></span>
+                          <span></span>
+                        </span>
+                    </div>
+              
+
 
                     <div id="navbarMenuHeroA" class="navbar-menu">
                         <div class="navbar-end">
@@ -30,8 +44,8 @@
                             </a>
                             {% endif %}
                             {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.response_form') }}" class="navbar-item">
-                                Response Form
+                            <a href="{{ url_for('main.response_list') }}" class="navbar-item">
+                                Response List
                             </a>
                             {% endif %}
                             {% if not current_user.is_authenticated %}
@@ -59,7 +73,19 @@
                {% endblock %}
             </div>
         </div>
+            
+        
+        <footer class="hero-footer">
+            <div class="content has-text-right">
+                <p>
+                    author: s.ryabukha<br>
+                    <a href="mailto:info@ryabukha.pp.ua">info@ryabukha.pp.ua</a><br>
+                <br>
+                </p>
+            </div>
+        </footer>
     </section>
-</body>
 
+<script type="text/javascript" src="./static/app.js"></script>
+</body>
 </html>
